Fixed some layout issues, added scoreboard history (not functional yet)

--- a/public/style.css
+++ b/public/style.css
@@ -79,8 +79,7 @@ button:disabled:hover {
 }
 
 #musicButton,
-#helpButton,
-#creditsButton {
+.infoContainer button {
     background-color: transparent;
     border: none;
     width: 50px;
@@ -88,13 +87,35 @@ button:disabled:hover {
 }
 
 #musicIcon,
-#helpButton img,
-#creditsButton img {
+.infoContainer img {
     width: 100%;
     height: 100%;
     object-fit: contain;
 }
 
+#scoreboardContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 10px;
+}
+
+#scoreboard {
+    width: 250px;
+    height: 250px;
+    background-color: gainsboro;
+    display: none;
+    animation: fadeIn 0.3s ease-out forwards;
+}
+
+#scoreboardButton:hover + #scoreboard {
+    display: block;
+}
+
+@keyframes fadeIn {
+    0% { opacity : 0; }
+    100% {opacity : 0.9; }
+}
 
 #overlay {
     position: fixed;
@@ -437,10 +458,17 @@ a {
 }
 
 #obstaclePage {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
+}
+
+#winnerMessage {
+    position: fixed;
+    top: 30px;
 }
 
 #canvasContainer {
